<resources xmlns:android="http://schemas.android.com/apk/res/android">


    <string name="com.twitter.sdk.android.CONSUMER_KEY">RBWEZABIo9AUfcAhJQnAHFDrB</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">Fr7oJ3GD6uderUcpVaGxJfCgzNNFQipg5fhhrZXiFqn6dUKHWk</string>


    <string name="facebook_app_id">2024269634471844</string>

    <string name="banner_ad_unit_id"> ca-app-pub-2609712853286547/2328013318 </string>
    <string name="interstitial_ad_unit_id"> ca-app-pub-2609712853286547/3150441710 </string>

    <string name="flat_map_style">

        [
    {
        \"featureType\": \"water\",
        \"elementType\": \"all\",
        \"stylers\": [
            {
                \"hue\": \"#7fc8ed\"
            },
            {
                \"saturation\": 55
            },
            {
                \"lightness\": -6
            },
            {
                \"visibility\": \"on\"
            }
        ]
    },
    {
        \"featureType\": \"water\",
        \"elementType\": \"labels\",
        \"stylers\": [
            {
                \"hue\": \"#7fc8ed\"
            },
            {
                \"saturation\": 55
            },
            {
                \"lightness\": -6
            },
            {
                \"visibility\": \"off\"
            }
        ]
    },
    {
        \"featureType\": \"poi.park\",
        \"elementType\": \"geometry\",
        \"stylers\": [
            {
                \"hue\": \"#83cead\"
            },
            {
                \"saturation\": 1
            },
            {
                \"lightness\": -15
            },
            {
                \"visibility\": \"on\"
            }
        ]
    },
    {
        \"featureType\": \"landscape\",
        \"elementType\": \"geometry\",
        \"stylers\": [
            {
                \"hue\": \"#f3f4f4\"
            },
            {
                \"saturation\": -84
            },
            {
                \"lightness\": 59
            },
            {
                \"visibility\": \"on\"
            }
        ]
    },
    {
        \"featureType\": \"landscape\",
        \"elementType\": \"labels\",
        \"stylers\": [
            {
                \"hue\": \"#ffffff\"
            },
            {
                \"saturation\": -100
            },
            {
                \"lightness\": 100
            },
            {
                \"visibility\": \"off\"
            }
        ]
    },
    {
        \"featureType\": \"road\",
        \"elementType\": \"geometry\",
        \"stylers\": [
            {
                \"hue\": \"#ffffff\"
            },
            {
                \"saturation\": -100
            },
            {
                \"lightness\": 100
            },
            {
                \"visibility\": \"on\"
            }
        ]
    },
    {
        \"featureType\": \"road\",
        \"elementType\": \"labels\",
        \"stylers\": [
            {
                \"hue\": \"#bbbbbb\"
            },
            {
                \"saturation\": -100
            },
            {
                \"lightness\": 26
            },
            {
                \"visibility\": \"on\"
            }
        ]
    },
    {
        \"featureType\": \"road.arterial\",
        \"elementType\": \"geometry\",
        \"stylers\": [
            {
                \"hue\": \"#ffcc00\"
            },
            {
                \"saturation\": 100
            },
            {
                \"lightness\": -35
            },
            {
                \"visibility\": \"simplified\"
            }
        ]
    },
    {
        \"featureType\": \"road.highway\",
        \"elementType\": \"geometry\",
        \"stylers\": [
            {
                \"hue\": \"#ffcc00\"
            },
            {
                \"saturation\": 100
            },
            {
                \"lightness\": -22
            },
            {
                \"visibility\": \"on\"
            }
        ]
    },
    {
        \"featureType\": \"poi.school\",
        \"elementType\": \"all\",
        \"stylers\": [
            {
                \"hue\": \"#d7e4e4\"
            },
            {
                \"saturation\": -60
            },
            {
                \"lightness\": 23
            },
            {
                \"visibility\": \"on\"
            }
        ]
    }
]


    </string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="search_hint"> Find places </string>
    <string name="most_popular_desc"> Most popular places </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="app_name">Spotter</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="blur_img_des">This will hold the blurred background</string>
    <string name="overlay_alpha">Overlay alpha</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_lbl">Don\'t have an account yet?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="home_most_popular">Most Popular</string>
    <string name="fullname">Fullname</string>
    <string name="email">E-mail Address</string>
    <string name="recover_account">Recover Account</string>
    <string name="recover_msg"><![CDATA[A temporary password will be send to your account. You can change it in Settings>Account.]]></string>
    <string name="resend">Resend</string>
    <string name="resend_lbl">Did not receive an e-mail?</string>
    <string name="title_activity_hotel">Hotels</string>
    <string name="title_activity_tourist_spot">TouristSpotActivity</string>
    <string name="title_activity_restaurant">RestaurantActivity</string>
    <string name="title_activity_favorites">FavoritesActivity</string>
    <string name="place_icon_logo">This will hold the icon or logo of the chosen place</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_find_places">FindPlacesActivity</string>
    <string name="title_activity_lol">lol</string>
    <string name="skip">Not now</string>
    <string name="title_activity_htr">HTRActivity</string>
    <string name="title_activity_book_marks">BookMarksActivity</string>
    <string name="enable_gps_network">Spotter needs to enable your gps and network state in able to find your location.</string>
    <string name="title_activity_review">ReviewActivity</string>
    <string name="loading_msg_1">Hi! We\'re getting your location. Make sure you have a stable internet connection.</string>
    <string name="loading_msg_2">Getting some information for you.</string>
    <string name="loading_msg_3">In order to locate the places near you, please enable your GPS.</string>
    <string name="loading_msg_4">Connection failed. Please try again later.</string>
    <string name="loading_msg_5">You\'re not connected to the outside world. Please enable yout Wi-Fi or Mobile Data.</string>
    <string name="not_sign">You must log in your account before you bookmark.</string>
    <string name="recommended_lable">people recommended this.</string>
    <string name="loading_mgs_3">Setting things up for you.</string>
    <string name="no_reviews_found">Hey wanderer! be the first one to give a review for this place.</string>

</resources>
