<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/recover_username_wrapper"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:theme="@style/TextInputLayoutTheme" >

        <EditText
            android:id="@+id/recover_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_username"
            android:textSize="14sp"
            android:padding="10dp"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:digits="qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM 123567890_@."
            android:textColor="@color/gray" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/recover_email_wrapper"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/recover_username_wrapper"
        android:padding="5dp"
        android:theme="@style/TextInputLayoutTheme" >

        <EditText
            android:id="@+id/recover_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="14sp"
            android:padding="10dp"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:digits="qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM 123567890_@."
            android:textColor="@color/gray" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/recover_account_btn"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_below="@id/recover_email_wrapper"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_bg"
        android:text="@string/recover_account"
        android:textColor="@color/white"
        android:onClick="clickListener"/>

    <TextView
        android:id="@+id/recover_acc_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/recover_account_btn"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="12sp"
        android:layout_centerHorizontal="true"
        android:textAlignment="gravity"
        android:textColor="@color/gray"
        android:text="@string/recover_msg"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/recover_acc_msg"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/resend_lbl"
            android:textSize="12sp"
            android:textColor="@color/gray"/>

        <TextView
            android:id="@+id/resend_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:clickable="true"
            android:onClick="clickListener"
            android:text="@string/resend"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>

</RelativeLayout>